--- a/ex11.html
+++ b/ex11.html
@@ -21,7 +21,7 @@
             if (vel >60){
                 res.innerHTML +=`<p>Você foi <strong>Multado</strong></p>`    
             }
-            res.innerHTML +=`<p>Dirija sempre com Cinto de segurança</p>`
+            res.innerHTML +=`<p>Dirija com Cuidado: sempre com Cinto de segurança</p>`
         }
     </script>
 </body>
